tests/fixtures/valid/layout/wrapped_call.pine
//@version=6
indicator("Wrapped call")
x = ta.sma(
    close,
    20
)
plot(x)
