tests/fixtures/invalid/syntax/input_keyword_qualifier.pine
//@version=6
indicator("x")
input int len = input.int(14)
